styles/styles.css
/*
===================
Variables
===================
*/
:root {
  /* Colors */
  --text-color: rgba(0, 0, 0, 0.87);
  --btn-text-color: #3c4043;
  --btn-bg-color: #f8f9fa;
  --footer-bg-color: #f2f2f2;
  --footer-link-color: #70757a;
  --footer-p-color: rgba(0, 0, 0, 0.54);

  /* Colors Hover */
  --icon-hover-color: rgba(60, 64, 67, 0.08);
  --btn-hover-text-color: #202124;
  --btn-hover-bg-color: #f8f9fa;
  --btn-hover-border: 1px solid #dadce0;

  /* Box Shadow */
  --input-container-shadow: 0 1px 6px rgba(32, 33, 36, 0.28);

  /* Borders */
  --input-border: 1px solid #dfe1e5;
  --footer-border: 1px solid #dadce0;
}

/*
===================
Global
===================
*/
a {
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

a,
button {
  cursor: pointer;
}
button {
  background: none;
  border: none;
  font-family: Arial, sans-serif;
}
html {
  font-family: Arial, sans-serif;
  color: var(--text-color);
}
body {
  font-size: 14px;
  height: 100vh;
  display: flex;
  flex-direction: column;
}

/*
===================
Layout
===================
*/
/* Header */
header {
  width: 100%;
  height: 55px;
  margin: 0 -1em;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.nav_container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 48px;
  width: 220px;
}
.nav_link {
  padding-left: 15px;
  font-size: 0.85rem;
  color: var(--text-color);
}
.nav_icon {
  padding-left: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 8px;
  width: 25px;
  height: 25px;
  border-radius: 50%;
}
.nav_icon:hover {
  background-color: var(--icon-hover-color);
}

.nav_profile_img {
  width: 32px;
  border-radius: 50%;
}

/* Main */
main {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 95%;
  height: 100%;
}

.search_form {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
}
.input_container {
  position: relative;
  width: 100%;
  height: 44px;
  margin: 2em 0;
  border-radius: 24px;
  max-width: 584px;
  border: var(--input-border);
}
.input_container:hover {
  box-shadow: var(--input-container-shadow);
}
.search_icon {
  display: inline-block;
  padding: 1em;
}
.input_box {
  position: relative;
  width: 85%;
  height: 50%;
  bottom: 5%;
  border: none;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1rem;
  color: var(--text-color);
}
.input_box:focus {
  outline: none;
  border: none;
}

.btn {
  background-color: var(--btn-bg-color);
  border-radius: 4px;
  padding: 0.6em;
  margin: 0.5em;
}
.btn:hover {
  background-color: var(--btn-hover-bg-color);
  outline: var(--btn-hover-border);
}

/* Footer */
footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: var(--footer-bg-color);
}
.footer_container {
  width: 95%;
  min-height: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.footer_container.left {
  align-items: flex-start;
  border-bottom: var(--footer-border);
  width: 100%;
}
.footer_p {
  margin-left: 2em;
  color: var(--footer-p-color);
}
.footer_link {
  display: inline-block;
  padding: 15px;
  color: var(--footer-link-color);
}

/*
===================
Media Queries
===================
*/

@media (min-width: 650px) {
  .footer_container:nth-last-child(1) {
    flex-direction: row;
    justify-content: space-between;
  }
}

